force-app/main/default/objects/Promo_Code__c/fields/Discount_In__c.field-meta.xml
<CustomField>
    <fullName>Discount_In__c</fullName>
    <label>Discount In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>