force-app/main/default/objects/Promo_Code__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Discount Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>