force-app/main/default/objects/Promo_Code__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>IF(TODAY() &lt;=   End_Date__c &amp;&amp; TODAY() &gt;=  Start_Date__c ,True ,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>