force-app/main/default/objects/Promo_Code__c/fields/Promo_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_Name__c</fullName>
    <label>Promo Code Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>